cmake_minimum_required(VERSION 2.6)
project(speed_test)
find_package(Boost 1.48.0 REQUIRED COMPONENTS test_exec_monitor)
add_compile_options("-std=c++0x")
add_executable(speed_test speed_test.cpp)
add_executable(counting_test test/stable_counting_test.cpp)
add_executable(radix_test test/stable_radix_test.cpp)
include_directories(${Boost_INCLUDE_DIRS} "./include")
link_directories(${Boost_LIBRARY_DIRS})
target_link_libraries(speed_test ${Boost_LIBRARIES})
target_link_libraries(counting_test ${Boost_LIBRARIES})
target_link_libraries(radix_test ${Boost_LIBRARIES})
add_test(counting_test counting_test)
add_test(radix_test radix_test)
